[ES6] RegExp sticky flag should be ignored in String.match when global flag is given https://bugs.webkit.org/show_bug.cgi?id=155332

Reviewed by Saam Barati.

Removed logic from stringProtoFuncMatch that handles the case where both global and sticky flags are set.

* runtime/StringPrototype.cpp:
(JSC::stringProtoFuncMatch):


Canonical link: https://commits.webkit.org/173430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197963 268f45cc-cd09-0410-ab3c-d52691b4dbfc